# sgdkx

./: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  THIRD-PARTY-LICENSES  THIRD-PARTY-LICENSES.html  THIRD_PARTY_LICENSES  about.toml
assets/web-template/: genesis.wasm  index.html
assets/web-template-v0.0.1/: index.html
assets/web-template-v0.0.1/js/: audio-processor.js
assets/web-template-v0.0.1/pkg/: jgenesis_web_simple.js  jgenesis_web_simple_bg.wasm
assets/web-template-v0.0.1/pkg/snippets/jgenesis-web-simple-bb459e162971e839/js/: ui.js
assets/web-template/pkg/: jgenesis_web_simple.js  package.json
locales/: en.yml  ja.yml
mine/: .gitignore
mine/web-export/: genesis.js  index.html
myproject/: .gitignore  Makefile
myproject2/: .clangd  .gitignore
src/: main.rs  path.rs  release.rs
src/commands/: blastem.rs  compile_commands.rs  doc.rs  doctor.rs  gdb.rs  install.rs  make.rs  mod.rs  new.rs  open.rs  run.rs  setup.rs  setup_emu.rs  setup_web.rs  uninstall.rs  web_export.rs  web_server.rs
