[package]
name = "sgdkx"
version = "0.2.2"
edition = "2024"
description = "Unofficial command-line toolkit for SGDK"
license = "MIT"
repository = "https://github.com/ulalume/sgdkx"
readme = "README.md"
keywords = ["sgdk", "megadrive", "genesis", "cli"]
categories = ["command-line-utilities"]
exclude = ["/target", ".github"]

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
toml_edit = "0.23.1"
which = "8.0.0"
fs_extra = "1.3"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
rust-i18n = "3"
zip = "4.1.0"
tempfile = "3.8"
sevenz-rust = "0.6.1"
regex = "1"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
mime_guess = "2"
