[package]
name = "sgdkx"
version = "0.4.1"
edition = "2024"
description = "Unofficial command-line toolkit for SGDK"
license = "MIT"
repository = "https://github.com/ulalume/sgdkx"
readme = "README.md"
keywords = ["sgdk", "megadrive", "genesis", "cli"]
categories = ["command-line-utilities"]
exclude = ["/target", ".github"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
dirs = "6"
toml_edit = "0.25"
which = "8"
fs_extra = "1.3"
reqwest = { version = "0.13", features = ["blocking", "json"] }
zip = "8"
tempfile = "3"
dialoguer = "0.12"
serde_json = "1.0"
